# jamrouter

./: .gitignore  AUTHORS  ChangeLog  Changelog  INSTALL  LICENSE  Makefile.am  README  TODO  config.h.in  configure.ac  jamrouter.spec.in
doc/: Makefile.am  juno-106.txt  midi-clock.txt  notes.txt  release-checklist.txt
doc/latency-tests/: Makefile.am  latency-1024.delta-1010.a2jmidid  latency-1024.delta-1010.jamrouter  latency-1024.sb-live.a2jmidid  latency-1024.sb-live.jamrouter  latency-128.delta-1010.a2jmidid  latency-128.delta-1010.jamrouter  latency-128.sb-live.a2jmidid  latency-128.sb-live.jamrouter  latency-16.delta-1010.jamrouter  latency-16.sb-live.jamrouter  latency-2048.delta-1010.a2jmidid  latency-2048.delta-1010.jamrouter  latency-2048.sb-live.a2jmidid  latency-2048.sb-live.jamrouter  latency-256.delta-1010.a2jmidid  latency-256.delta-1010.jamrouter  latency-256.sb-live.a2jmidid  latency-256.sb-live.jamrouter  latency-32.delta-1010.jamrouter  latency-32.sb-live.jamrouter  latency-512.delta-1010.a2jmidid  latency-512.delta-1010.jamrouter  latency-512.sb-live.a2jmidid  latency-512.sb-live.jamrouter  latency-64.delta-1010.a2jmidid  latency-64.delta-1010.jamrouter  latency-64.sb-live.a2jmidid  latency-64.sb-live.jamrouter
latency-tests/: analyze-full  analyze-test  continuous-test  crunch-test  crunch-tests  jamrouter-latency-test  jitter-report  latency-report  multitest  run-batch
man/: Makefile.am  jamrouter.1
scripts/: Makefile.am  version-sh
src/: Makefile.am  alsa_seq.c  alsa_seq.h  debug.c  debug.h  driver.c  driver.h  jack.c  jack.h  jack_dll.c  jack_dll.h  jack_midi.c  jack_midi.h  jamrouter.c  jamrouter.h  juno.c  juno.h  lash.c  lash.h  midi_event.c  midi_event.h  mididefs.h  rawmidi.c  rawmidi.h  timekeeping.c  timekeeping.h  timeutil.c  timeutil.h
