## Process this file with automake to produce Makefile.in

SUBDIRS = #

dist_docs = \
	latency-16.delta-1010.jamrouter \
	latency-16.sb-live.jamrouter \
	latency-32.delta-1010.jamrouter \
	latency-32.sb-live.jamrouter \
	latency-64.delta-1010.a2jmidid \
	latency-64.delta-1010.jamrouter \
	latency-64.sb-live.a2jmidid \
	latency-64.sb-live.jamrouter \
	latency-128.delta-1010.a2jmidid \
	latency-128.delta-1010.jamrouter \
	latency-128.sb-live.a2jmidid \
	latency-128.sb-live.jamrouter \
	latency-256.delta-1010.a2jmidid \
	latency-256.delta-1010.jamrouter \
	latency-256.sb-live.a2jmidid \
	latency-256.sb-live.jamrouter \
	latency-512.delta-1010.a2jmidid \
	latency-512.delta-1010.jamrouter \
	latency-512.sb-live.a2jmidid \
	latency-512.sb-live.jamrouter \
	latency-1024.delta-1010.a2jmidid \
	latency-1024.delta-1010.jamrouter \
	latency-1024.sb-live.a2jmidid \
	latency-1024.sb-live.jamrouter \
	latency-2048.delta-1010.a2jmidid \
	latency-2048.delta-1010.jamrouter \
	latency-2048.sb-live.a2jmidid \
	latency-2048.sb-live.jamrouter

dist_DATA = ${dist_docs}

distdir = ${docdir}/latency-tests

EXTRA_DIST = ${dist_docs}
